fix the spacing in about card

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -178,14 +178,14 @@ section {
 }
 
 .slider-title-container {
-  overflow: hidden; /* Mask for slide-up effect */
+  overflow: hidden; 
 }
 
 .slider-title {
   color: white;
   background-color: #000080ff;
   padding: 10px 20px;
-  font-size: 3rem; /* Adjust size */
+  font-size: 100px;
   font-weight: bold;
   text-align: center;
   margin: 0;
@@ -1243,6 +1243,7 @@ section {
   border-radius: 10px;
   transition: all 0.3s ease-out 0s;
   background-color: #fff;
+  height: 100%; 
 }
 
 .about .icon-box i {
@@ -1268,6 +1269,8 @@ section {
 
 .about .icon-box p {
   margin-bottom: 0;
+  text-align: left;
+  line-height: 1.5;
 }
 
 .about .icon-box:hover i {
@@ -1275,10 +1278,7 @@ section {
   color: var(--contrast-color);
 }
 
-.about .icon-boxes .col-md-6:nth-child(2) .icon-box,
-.about .icon-boxes .col-md-6:nth-child(4) .icon-box {
-  /* margin-top: -40px; */
-}
+
 
 @media (max-width: 768px) {
   .about .icon-boxes .col-md-6:nth-child(2) .icon-box,
